--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -17,5 +17,8 @@
             {% block monolog_doctrine_content %}
             {% endblock %}
         </div>
+
+        <script src="//code.jquery.com/jquery.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
     </body>
 </html>
