--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -7,6 +7,7 @@
         <thead>
             <tr>
                 <th>{{ knp_pagination_sortable(pagination, 'Datetime', 'l.datetime') }}</th>
+                <th></th>
                 <th>{{ knp_pagination_sortable(pagination, 'Message', 'l.message') }}</th>
                 <th></th>
             </tr>
@@ -15,6 +16,7 @@
             {% for log in pagination %}
             <tr>
                 <td>{{ log.datetime }}</td>
+                <td>{{ utils.render_count_badge(log.count) }}</td>
                 <td>
                     <a href="{{ path('lexik_monolog_doctrine_show', { 'id': log.id }) }}">
                         {{ log.message }}
