--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.css" rel="stylesheet">
+        <link href="{{ asset('bundles/lexikmonologdoctrine/css/log.css') }}" rel="stylesheet">
     </head>
     <body>
         <div class="container">
