--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.css" rel="stylesheet">
+        <link href="{{ asset('bundles/lexikmonologdoctrine/css/datepicker.css') }}" rel="stylesheet">
         <link href="{{ asset('bundles/lexikmonologdoctrine/css/log.css') }}" rel="stylesheet">
     </head>
     <body>
@@ -21,5 +22,7 @@
 
         <script src="//code.jquery.com/jquery.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+        <script src="{{ asset('bundles/lexikmonologdoctrine/js/bootstrap-datepicker.js') }}"></script>
+        <script src="{{ asset('bundles/lexikmonologdoctrine/js/log.js') }}"></script>
     </body>
 </html>
