updated search submit button

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -33,7 +33,9 @@
                 </div>
             </div>
             <div class="span1 filter-submit">
-                <input type="submit" class="btn btn-primary" value="{{ 'log.search.submit' | trans }}" />
+                <button type="submit" class="btn btn-primary">
+                    <i class="icon-search icon-white"></i>
+                </button>
             </div>
         </div>
     </form>
