--- a/Resources/public/css/log.css
+++ b/Resources/public/css/log.css
@@ -1,4 +1,4 @@
-.monolog-doctrine-header h1 {
+.monolog-browser-header h1 {
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 22px;
     font-weight: normal;
@@ -7,16 +7,16 @@
     word-break: break-all;
 }
 
-table.monolog-doctrine-results td {
+table.monolog-browser-results td {
     word-break: break-all;
     padding: 8px 5px;
 }
-table.monolog-doctrine-results td:first-child { white-space: nowrap; }
+table.monolog-browser-results td:first-child { white-space: nowrap; }
 
-.monolog-doctrine-filters .filter-term input { width: 100%; }
-.monolog-doctrine-filters .filter-level select { width: 100%; }
-.monolog-doctrine-filters .filter-datefrom { float: left; margin-right: 10px; }
-.monolog-doctrine-filters .filter-daterange .datepicker { width: 75px; }
-.monolog-doctrine-filters .filter-daterange .hour,
-.monolog-doctrine-filters .filter-daterange .minute { width: 20px; }
-.monolog-doctrine-filters .filter-submit { padding-top: 25px; }
+.monolog-browser-filters .filter-term input { width: 100%; }
+.monolog-browser-filters .filter-level select { width: 100%; }
+.monolog-browser-filters .filter-datefrom { float: left; margin-right: 10px; }
+.monolog-browser-filters .filter-daterange .datepicker { width: 75px; }
+.monolog-browser-filters .filter-daterange .hour,
+.monolog-browser-filters .filter-daterange .minute { width: 20px; }
+.monolog-browser-filters .filter-submit { padding-top: 25px; }
